--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -593,7 +593,7 @@ border-radius:50px;
        <property name="geometry">
         <rect>
          <x>500</x>
-         <y>30</y>
+         <y>0</y>
          <width>331</width>
          <height>51</height>
         </rect>
@@ -605,17 +605,17 @@ font:bold;
 font-family : century gothic;</string>
        </property>
        <property name="text">
-        <string>John Doe</string>
+        <string>Welcome !</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="pr_welcome">
        <property name="geometry">
         <rect>
          <x>570</x>
-         <y>70</y>
+         <y>40</y>
          <width>201</width>
          <height>41</height>
         </rect>
@@ -626,10 +626,131 @@ font-size:18px;
 font-family : century gothic;</string>
        </property>
        <property name="text">
-        <string>john.doe@esprit.tn</string>
+        <string>gnhrn</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+      <widget class="QWidget" name="verticalLayoutWidget_3">
+       <property name="geometry">
+        <rect>
+         <x>590</x>
+         <y>80</y>
+         <width>160</width>
+         <height>362</height>
+        </rect>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_11">
+          <property name="styleSheet">
+           <string notr="true">color: #4C5958;
+font-size:18px;
+font-family : century gothic;
+</string>
+          </property>
+          <property name="text">
+           <string>Nom:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="profil_nom"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_20">
+          <property name="styleSheet">
+           <string notr="true">color: #4C5958;
+font-size:18px;
+font-family : century gothic;
+</string>
+          </property>
+          <property name="text">
+           <string>Prénom:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="profil_pre"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_25">
+          <property name="styleSheet">
+           <string notr="true">color: #4C5958;
+font-size:18px;
+font-family : century gothic;
+</string>
+          </property>
+          <property name="text">
+           <string>Date de naissance:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QDateEdit" name="profil_date"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_21">
+          <property name="styleSheet">
+           <string notr="true">color: #4C5958;
+font-size:18px;
+font-family : century gothic;
+</string>
+          </property>
+          <property name="text">
+           <string>Email:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="profil_em"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_22">
+          <property name="styleSheet">
+           <string notr="true">color: #4C5958;
+font-size:18px;
+font-family : century gothic;
+</string>
+          </property>
+          <property name="text">
+           <string>Téléphone:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="profil_tele"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_23">
+          <property name="styleSheet">
+           <string notr="true">color: #4C5958;
+font-size:18px;
+font-family : century gothic;
+</string>
+          </property>
+          <property name="text">
+           <string>Adresse:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="profil_ad"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QPushButton" name="pushButton">
+       <property name="geometry">
+        <rect>
+         <x>770</x>
+         <y>370</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Modifier</string>
        </property>
       </widget>
      </widget>
@@ -777,6 +898,19 @@ font-family : century gothic;
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="pdf">
+        <property name="geometry">
+         <rect>
+          <x>110</x>
+          <y>260</y>
+          <width>80</width>
+          <height>25</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>PushButton</string>
         </property>
        </widget>
       </widget>
@@ -1466,18 +1600,15 @@ font-weight: normal;
           <property name="verticalSpacing">
            <number>0</number>
           </property>
-          <item row="2" column="4">
-           <widget class="QLineEdit" name="lineEdit_ad"/>
-          </item>
-          <item row="0" column="2">
-           <widget class="QLabel" name="label_5">
+          <item row="2" column="3">
+           <widget class="QLabel" name="label_13">
             <property name="text">
-             <string/>
+             <string>Adresse: </string>
             </property>
            </widget>
           </item>
-          <item row="1" column="4">
-           <widget class="QLabel" name="erm_tel">
+          <item row="1" column="1">
+           <widget class="QLabel" name="erm_nom">
             <property name="styleSheet">
              <string notr="true">QLabel{
 color: rgb(255, 0, 0);
@@ -1490,8 +1621,40 @@ font-family : century gothic;
             </property>
            </widget>
           </item>
-          <item row="6" column="1">
-           <widget class="QLineEdit" name="lineEdit_image"/>
+          <item row="2" column="4">
+           <widget class="QLineEdit" name="lineEdit_ad"/>
+          </item>
+          <item row="6" column="4">
+           <layout class="QHBoxLayout" name="horizontalLayout_4">
+            <item>
+             <widget class="QRadioButton" name="hm_m">
+              <property name="text">
+               <string>Homme</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="fm_m">
+              <property name="text">
+               <string>Femme</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QRadioButton" name="au_m">
+              <property name="text">
+               <string>Autre</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item row="7" column="4">
+           <widget class="QLabel" name="erm_s">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
           </item>
           <item row="4" column="0">
            <widget class="QLabel" name="label_15">
@@ -1500,10 +1663,89 @@ font-family : century gothic;
             </property>
            </widget>
           </item>
-          <item row="7" column="4">
-           <widget class="QLabel" name="erm_s">
+          <item row="5" column="4">
+           <widget class="QLabel" name="erm_em">
+            <property name="styleSheet">
+             <string notr="true">QLabel{
+color: rgb(255, 0, 0);
+font-size:11px;
+font-family : century gothic;
+}</string>
+            </property>
             <property name="text">
              <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QDateEdit" name="dateEdit_date">
+            <property name="calendarPopup">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="1">
+           <widget class="QLabel" name="erm_im">
+            <property name="styleSheet">
+             <string notr="true">QLabel{
+color: rgb(255, 0, 0);
+font-size:11px;
+font-family : century gothic;
+}</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_14">
+            <property name="text">
+             <string>Prénom: </string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="3">
+           <widget class="QLabel" name="label_17">
+            <property name="text">
+             <string>Email: </string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="4">
+           <widget class="QLabel" name="erm_ad">
+            <property name="styleSheet">
+             <string notr="true">QLabel{
+color: rgb(255, 0, 0);
+font-size:11px;
+font-family : century gothic;
+}</string>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="4">
+           <widget class="QLineEdit" name="lineEdit_tele"/>
+          </item>
+          <item row="6" column="1">
+           <widget class="QLineEdit" name="lineEdit_image"/>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="lineEdit_pre"/>
+          </item>
+          <item row="6" column="0">
+           <widget class="QLabel" name="label_18">
+            <property name="text">
+             <string>Image:</string>
             </property>
            </widget>
           </item>
@@ -1539,32 +1781,8 @@ border: 1px solid grey;
             </item>
            </layout>
           </item>
-          <item row="6" column="0">
-           <widget class="QLabel" name="label_18">
-            <property name="text">
-             <string>Image:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QLineEdit" name="lineEdit_pre"/>
-          </item>
-          <item row="4" column="3">
-           <widget class="QLabel" name="label_17">
-            <property name="text">
-             <string>Email: </string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_14">
-            <property name="text">
-             <string>Prénom: </string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLabel" name="erm_nom">
+          <item row="1" column="4">
+           <widget class="QLabel" name="erm_tel">
             <property name="styleSheet">
              <string notr="true">QLabel{
 color: rgb(255, 0, 0);
@@ -1572,90 +1790,6 @@ font-size:11px;
 font-family : century gothic;
 }</string>
             </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="1">
-           <widget class="QLabel" name="erm_im">
-            <property name="styleSheet">
-             <string notr="true">QLabel{
-color: rgb(255, 0, 0);
-font-size:11px;
-font-family : century gothic;
-}</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="3">
-           <widget class="QLabel" name="label_13">
-            <property name="text">
-             <string>Adresse: </string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_12">
-            <property name="text">
-             <string>Nom:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
-           <widget class="QLabel" name="label_16">
-            <property name="text">
-             <string>Téléphone: </string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="4">
-           <widget class="QLabel" name="erm_em">
-            <property name="styleSheet">
-             <string notr="true">QLabel{
-color: rgb(255, 0, 0);
-font-size:11px;
-font-family : century gothic;
-}</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QDateEdit" name="dateEdit_date">
-            <property name="calendarPopup">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="3">
-           <widget class="QLabel" name="label_8">
-            <property name="text">
-             <string>Sexe:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="4">
-           <widget class="QLabel" name="erm_ad">
-            <property name="styleSheet">
-             <string notr="true">QLabel{
-color: rgb(255, 0, 0);
-font-size:11px;
-font-family : century gothic;
-}</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="5">
-           <widget class="QLabel" name="label_6">
             <property name="text">
              <string/>
             </property>
@@ -1675,39 +1809,39 @@ font-family : century gothic;
             </property>
            </widget>
           </item>
-          <item row="0" column="4">
-           <widget class="QLineEdit" name="lineEdit_tele"/>
-          </item>
-          <item row="6" column="4">
-           <layout class="QHBoxLayout" name="horizontalLayout_4">
-            <item>
-             <widget class="QRadioButton" name="hm_m">
-              <property name="text">
-               <string>Homme</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="fm_m">
-              <property name="text">
-               <string>Femme</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="au_m">
-              <property name="text">
-               <string>Autre</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
           <item row="0" column="1">
            <widget class="QLineEdit" name="lineEdit_nom"/>
           </item>
+          <item row="0" column="5">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_12">
+            <property name="text">
+             <string>Nom:</string>
+            </property>
+           </widget>
+          </item>
           <item row="4" column="4">
            <widget class="QLineEdit" name="lineEdit_em"/>
+          </item>
+          <item row="0" column="3">
+           <widget class="QLabel" name="label_16">
+            <property name="text">
+             <string>Téléphone: </string>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="3">
+           <widget class="QLabel" name="label_8">
+            <property name="text">
+             <string>Sexe:</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -2045,33 +2179,47 @@ background-color:white;
      <rect>
       <x>40</x>
       <y>460</y>
-      <width>251</width>
+      <width>261</width>
       <height>161</height>
      </rect>
     </property>
     <property name="title">
-     <string>GroupBox</string>
+     <string/>
     </property>
     <widget class="QWidget" name="verticalLayoutWidget_2">
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>30</y>
+       <y>40</y>
        <width>160</width>
-       <height>89</height>
+       <height>116</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
-       <widget class="QLineEdit" name="test1_3"/>
+       <widget class="QLineEdit" name="login"/>
       </item>
       <item>
-       <widget class="QLineEdit" name="test2_3"/>
+       <widget class="QLineEdit" name="pass"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="er_log">
+        <property name="styleSheet">
+         <string notr="true">QLabel{
+color: rgb(255, 0, 0);
+font-size:11px;
+font-family : century gothic;
+}</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="bo_3">
         <property name="text">
-         <string>PushButton</string>
+         <string>Log In</string>
         </property>
        </widget>
       </item>
