--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -33,6 +33,7 @@ QWidget
 {
 	background-color:#fff;
 	color: #000000;
+	show-decoration-selected: 0;
 
 }
 
@@ -645,27 +646,115 @@ font-family : century gothic;</string>
     <widget class="QWidget" name="employes"/>
     <widget class="QWidget" name="evenements"/>
     <widget class="QWidget" name="necessiteux">
-     <widget class="QTabWidget" name="tabWidget">
+     <widget class="QListWidget" name="listWidget_Ne">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>10</x>
         <y>0</y>
-        <width>961</width>
-        <height>661</height>
+        <width>951</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border:none;
+background:transparent;
+/*background-color: #262626;*/
+border-radius:15px;
+font-family:century gothic;
+
+QListView::text {
+    left: 10px;
+}</string>
+      </property>
+     </widget>
+     <widget class="QStackedWidget" name="stackedWidget_Ne">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>80</y>
+        <width>951</width>
+        <height>591</height>
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
-      <widget class="QWidget" name="tab">
-       <attribute name="title">
-        <string>Acceuil</string>
-       </attribute>
+      <widget class="QWidget" name="Consulter">
+       <widget class="QPushButton" name="modifier_Necessiteux">
+        <property name="geometry">
+         <rect>
+          <x>670</x>
+          <y>310</y>
+          <width>131</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{
+font-size:18px;
+font-family:century gothic;
+background:white;
+border-radius:60px;
+color:#BF7069;
+border-radius:15px;
+border:1px solid #BF7069;
+}
+QPushButton:hover{
+color:#FFABAB;
+/*background:#801414;*/
+background:rgb(255, 228, 228);
+border-radius:15px;
+}</string>
+        </property>
+        <property name="text">
+         <string>Modifier</string>
+        </property>
+       </widget>
+       <widget class="QTableView" name="tableN">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>310</y>
+          <width>481</width>
+          <height>261</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="supprimerNecessiteux">
+        <property name="geometry">
+         <rect>
+          <x>810</x>
+          <y>310</y>
+          <width>131</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{
+font-size:18px;
+font-family:century gothic;
+background:white;
+border-radius:60px;
+color:#BF7069;
+border-radius:15px;
+border:1px solid #BF7069;
+}
+QPushButton:hover{
+color:#FFABAB;
+/*background:#801414;*/
+background:rgb(255, 228, 228);
+border-radius:15px;
+}</string>
+        </property>
+        <property name="text">
+         <string>Supprimer</string>
+        </property>
+       </widget>
        <widget class="QFrame" name="frame_2">
         <property name="geometry">
          <rect>
           <x>260</x>
-          <y>10</y>
+          <y>0</y>
           <width>691</width>
           <height>301</height>
          </rect>
@@ -974,21 +1063,24 @@ font-weight: normal;
          </property>
         </widget>
        </widget>
-       <widget class="QTableView" name="tableN">
+       <widget class="QLineEdit" name="lineEdit">
         <property name="geometry">
          <rect>
-          <x>10</x>
-          <y>320</y>
-          <width>491</width>
-          <height>301</height>
+          <x>520</x>
+          <y>390</y>
+          <width>411</width>
+          <height>41</height>
          </rect>
+        </property>
+        <property name="placeholderText">
+         <string>Rechercher</string>
         </property>
        </widget>
        <widget class="QLabel" name="gif_necessiteux">
         <property name="geometry">
          <rect>
           <x>0</x>
-          <y>30</y>
+          <y>20</y>
           <width>241</width>
           <height>241</height>
          </rect>
@@ -1018,7 +1110,7 @@ border-radius:50px;
         <property name="geometry">
          <rect>
           <x>520</x>
-          <y>320</y>
+          <y>310</y>
           <width>131</width>
           <height>61</height>
          </rect>
@@ -1044,41 +1136,94 @@ border-radius:15px;
          <string>Ajouter</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="modifier_Necessiteux">
+       <widget class="QComboBox" name="comboBox_Ne">
         <property name="geometry">
          <rect>
-          <x>670</x>
-          <y>320</y>
-          <width>131</width>
+          <x>590</x>
+          <y>450</y>
+          <width>191</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+        <item>
+         <property name="text">
+          <string>Défault</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Nom</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Prénom</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Age</string>
+         </property>
+        </item>
+       </widget>
+       <widget class="QLabel" name="label_21">
+        <property name="geometry">
+         <rect>
+          <x>520</x>
+          <y>430</y>
+          <width>81</width>
           <height>61</height>
          </rect>
         </property>
         <property name="styleSheet">
-         <string notr="true">QPushButton{
+         <string notr="true">color: #2C3E50;
 font-size:18px;
-font-family:century gothic;
-background:white;
-border-radius:60px;
-color:#BF7069;
-border-radius:15px;
-border:1px solid #BF7069;
-}
-QPushButton:hover{
-color:#FFABAB;
-/*background:#801414;*/
-background:rgb(255, 228, 228);
-border-radius:15px;
-}</string>
+font:bold;
+font-family : century gothic;</string>
         </property>
         <property name="text">
-         <string>Modifier</string>
+         <string>Tri par :</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="supprimerNecessiteux">
+      </widget>
+      <widget class="QWidget" name="RendezVous">
+       <widget class="QTableView" name="tableRdv">
         <property name="geometry">
          <rect>
-          <x>810</x>
-          <y>320</y>
+          <x>30</x>
+          <y>310</y>
+          <width>921</width>
+          <height>261</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_22">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>230</y>
+          <width>81</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: #2C3E50;
+font-size:18px;
+font:bold;
+font-family : century gothic;</string>
+        </property>
+        <property name="text">
+         <string>Tri par :</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="supprimerrDV">
+        <property name="geometry">
+         <rect>
+          <x>680</x>
+          <y>100</y>
           <width>131</width>
           <height>61</height>
          </rect>
@@ -1104,12 +1249,260 @@ border-radius:15px;
          <string>Supprimer</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit">
+       <widget class="QComboBox" name="comboBox_Rdv">
         <property name="geometry">
          <rect>
-          <x>520</x>
-          <y>400</y>
-          <width>411</width>
+          <x>650</x>
+          <y>250</y>
+          <width>191</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+        <item>
+         <property name="text">
+          <string>Défault</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Nom</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Prénom</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Age</string>
+         </property>
+        </item>
+       </widget>
+       <widget class="QFrame" name="frame_3">
+        <property name="geometry">
+         <rect>
+          <x>260</x>
+          <y>0</y>
+          <width>311</width>
+          <height>301</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">
+QLabel{
+color: #2C3E50;
+font-size:18px;
+font:bold;
+font-family : century gothic;
+}
+
+QLineEdit{
+background:transparent;
+border:none;
+color:#717072;
+border-bottom:1px solid #717072;
+}
+
+QDateEdit
+{
+    background-color: white;
+	border:none;
+    spacing: 5px; 
+	font-size:18px;
+font-weight: normal;
+	font-family:century gothic;
+}
+
+QDateTimeEdit
+{
+    background-color: white;
+	border:none;
+    spacing: 5px; 
+	font-size:18px;
+font-weight: normal;
+	font-family:century gothic;
+}
+
+</string>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <widget class="QLabel" name="label_23">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>210</y>
+           <width>161</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Date</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_24">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>140</y>
+           <width>161</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Adresse</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_25">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>70</y>
+           <width>161</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>ID Rendez-Vous</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="id_Ne">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>40</y>
+           <width>271</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="placeholderText">
+          <string>ID Necessiteux</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_id_3">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>0</y>
+           <width>151</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>ID Necessiteux</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="id_Re">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>110</y>
+           <width>271</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="placeholderText">
+          <string>ID Rendez-Vous</string>
+         </property>
+        </widget>
+        <widget class="QLineEdit" name="AdresseRdv">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>180</y>
+           <width>271</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="echoMode">
+          <enum>QLineEdit::Normal</enum>
+         </property>
+         <property name="placeholderText">
+          <string>Adresse</string>
+         </property>
+        </widget>
+        <widget class="QDateTimeEdit" name="date_Rdv">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>250</y>
+           <width>271</width>
+           <height>31</height>
+          </rect>
+         </property>
+         <property name="contextMenuPolicy">
+          <enum>Qt::DefaultContextMenu</enum>
+         </property>
+         <property name="calendarPopup">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QPushButton" name="modifierRdv">
+        <property name="geometry">
+         <rect>
+          <x>780</x>
+          <y>10</y>
+          <width>131</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{
+font-size:18px;
+font-family:century gothic;
+background:white;
+border-radius:60px;
+color:#BF7069;
+border-radius:15px;
+border:1px solid #BF7069;
+}
+QPushButton:hover{
+color:#FFABAB;
+/*background:#801414;*/
+background:rgb(255, 228, 228);
+border-radius:15px;
+}</string>
+        </property>
+        <property name="text">
+         <string>Modifier</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="recherche_rdv">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>180</y>
+          <width>281</width>
           <height>41</height>
          </rect>
         </property>
@@ -1117,17 +1510,96 @@ border-radius:15px;
          <string>Rechercher</string>
         </property>
        </widget>
+       <widget class="QLabel" name="gif_rdv">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>20</y>
+          <width>241</width>
+          <height>241</height>
+         </rect>
+        </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color:#fff;
+border-radius:50px;
+</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="scaledContents">
+         <bool>false</bool>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="ajouterRdv">
+        <property name="geometry">
+         <rect>
+          <x>580</x>
+          <y>10</y>
+          <width>131</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{
+font-size:18px;
+font-family:century gothic;
+background:white;
+border-radius:60px;
+color:#BF7069;
+border-radius:15px;
+border:1px solid #BF7069;
+}
+QPushButton:hover{
+color:#FFABAB;
+/*background:#801414;*/
+background:rgb(255, 228, 228);
+border-radius:15px;
+}</string>
+        </property>
+        <property name="text">
+         <string>Ajouter</string>
+        </property>
+       </widget>
       </widget>
-      <widget class="QWidget" name="tab_2">
-       <attribute name="title">
-        <string>Rendez-Vous</string>
-       </attribute>
+      <widget class="QWidget" name="QrCode">
+       <widget class="QLabel" name="qrcode">
+        <property name="geometry">
+         <rect>
+          <x>440</x>
+          <y>160</y>
+          <width>201</width>
+          <height>181</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="qrcode_button">
+        <property name="geometry">
+         <rect>
+          <x>240</x>
+          <y>390</y>
+          <width>401</width>
+          <height>111</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Generate</string>
+        </property>
+       </widget>
       </widget>
-      <widget class="QWidget" name="tab_3">
-       <attribute name="title">
-        <string>Recherche et Tri</string>
-       </attribute>
-      </widget>
+      <widget class="QWidget" name="Statistiques"/>
      </widget>
     </widget>
     <widget class="QWidget" name="crises"/>
@@ -1140,7 +1612,7 @@ border-radius:15px;
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
