--- a/ressources.qrc
+++ b/ressources.qrc
@@ -19,5 +19,6 @@
         <file>images/646-walking-walkcycle-person-outline.gif</file>
         <file>images/walking man transparent.gif</file>
         <file>images/20-love-heart-flat.gif</file>
+        <file>images/rendez_vous.gif</file>
     </qresource>
 </RCC>
