--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -677,7 +677,7 @@ QListView::text {
        </rect>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="Consulter">
        <widget class="QPushButton" name="modifier_Necessiteux">
@@ -1278,7 +1278,7 @@ border-radius:15px;
         </item>
         <item>
          <property name="text">
-          <string>Age</string>
+          <string>Date Rendez-Vous</string>
          </property>
         </item>
        </widget>
@@ -1572,31 +1572,324 @@ border-radius:15px;
        </widget>
       </widget>
       <widget class="QWidget" name="QrCode">
-       <widget class="QLabel" name="qrcode">
+       <widget class="QFrame" name="frame_4">
         <property name="geometry">
          <rect>
-          <x>440</x>
-          <y>160</y>
-          <width>201</width>
-          <height>181</height>
+          <x>40</x>
+          <y>20</y>
+          <width>891</width>
+          <height>451</height>
          </rect>
         </property>
-        <property name="text">
-         <string/>
+        <property name="styleSheet">
+         <string notr="true">border-radius:50px;
+
+background-color: rgb(255, 228, 228);
+
+</string>
         </property>
-       </widget>
-       <widget class="QPushButton" name="qrcode_button">
-        <property name="geometry">
-         <rect>
-          <x>240</x>
-          <y>390</y>
-          <width>401</width>
-          <height>111</height>
-         </rect>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
         </property>
-        <property name="text">
-         <string>Generate</string>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
         </property>
+        <widget class="QLabel" name="qrcode">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>411</width>
+           <height>451</height>
+          </rect>
+         </property>
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">background-color:#fff;
+border-radius:50px;
+</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="scaledContents">
+          <bool>false</bool>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="wordWrap">
+          <bool>false</bool>
+         </property>
+        </widget>
+        <widget class="QLabel" name="namelabel">
+         <property name="geometry">
+          <rect>
+           <x>500</x>
+           <y>20</y>
+           <width>331</width>
+           <height>51</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #2C3E50;
+font-size:30px;
+font:bold;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string>John Doe</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QLabel" name="email_label">
+         <property name="geometry">
+          <rect>
+           <x>450</x>
+           <y>90</y>
+           <width>431</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #4C5958;
+font-size:18px;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string>john.doe@esprit.tn</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QLabel" name="datedenai">
+         <property name="geometry">
+          <rect>
+           <x>440</x>
+           <y>170</y>
+           <width>151</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #4C5958;
+font-size:15px;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string>Date de Naissance</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QLabel" name="telephone">
+         <property name="geometry">
+          <rect>
+           <x>640</x>
+           <y>170</y>
+           <width>81</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #4C5958;
+font-size:15px;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string>Telephone</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QLabel" name="besoin">
+         <property name="geometry">
+          <rect>
+           <x>780</x>
+           <y>170</y>
+           <width>81</width>
+           <height>41</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #4C5958;
+font-size:15px;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string>Besoin</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QLabel" name="date_nai_label">
+         <property name="geometry">
+          <rect>
+           <x>430</x>
+           <y>210</y>
+           <width>171</width>
+           <height>31</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #2C3E50;
+font-size:18px;
+font:bold;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QLabel" name="telephone_label">
+         <property name="geometry">
+          <rect>
+           <x>620</x>
+           <y>210</y>
+           <width>121</width>
+           <height>31</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #2C3E50;
+font-size:15px;
+font:bold;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QLabel" name="besoin_label">
+         <property name="geometry">
+          <rect>
+           <x>760</x>
+           <y>210</y>
+           <width>121</width>
+           <height>31</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #2C3E50;
+font-size:15px;
+font:bold;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
+        <widget class="QLabel" name="id_label">
+         <property name="geometry">
+          <rect>
+           <x>610</x>
+           <y>70</y>
+           <width>111</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">color: #4C5958;
+font-size:12px;
+font:bold;
+font-family : century gothic;</string>
+         </property>
+         <property name="text">
+          <string>457587</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="qrcode_button">
+         <property name="geometry">
+          <rect>
+           <x>430</x>
+           <y>380</y>
+           <width>171</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+font-size:18px;
+font-family:century gothic;
+background:white;
+border-radius:60px;
+color:#BF7069;
+border-radius:15px;
+border:1px solid #BF7069;
+}
+QPushButton:hover{
+color:#FFABAB;
+/*background:#801414;*/
+background:rgb(255, 228, 228);
+border-radius:15px;
+}</string>
+         </property>
+         <property name="text">
+          <string>Generer QR Code</string>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="generatepdf">
+         <property name="geometry">
+          <rect>
+           <x>650</x>
+           <y>380</y>
+           <width>181</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+font-size:18px;
+font-family:century gothic;
+background:white;
+border-radius:60px;
+color:#BF7069;
+border-radius:15px;
+border:1px solid #BF7069;
+}
+QPushButton:hover{
+color:#FFABAB;
+/*background:#801414;*/
+background:rgb(255, 228, 228);
+border-radius:15px;
+}</string>
+         </property>
+         <property name="text">
+          <string>Generer PDF</string>
+         </property>
+        </widget>
        </widget>
       </widget>
       <widget class="QWidget" name="Statistiques"/>
